// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/collapse/demo/accordion.md correctly 1`] = `
<div>
  <div class="ant-collapse">
    <div role="tablist" class="ant-collapse-item">
      <div role="tab" class="ant-collapse-header">
        <i class="arrow"></i>This is panel header 1</div>
      <!---->
    </div>
    <div role="tablist" class="ant-collapse-item">
      <div role="tab" class="ant-collapse-header">
        <i class="arrow"></i>This is panel header 2</div>
      <!---->
    </div>
    <div role="tablist" class="ant-collapse-item">
      <div role="tab" class="ant-collapse-header">
        <i class="arrow"></i>This is panel header 3</div>
      <!---->
    </div>
  </div>
</div>
`;

exports[`renders ./components/collapse/demo/basic.md correctly 1`] = `
<div>
  <div class="ant-collapse">
    <div role="tablist" class="ant-collapse-item ant-collapse-item-active">
      <div role="tab" aria-expanded="true" class="ant-collapse-header">
        <i class="arrow"></i>This is panel header 1</div>
      <div role="tabpanel" class="ant-collapse-content ant-collapse-content-active">
        <div class="ant-collapse-content-box">
          <p>A dog is a type of domesticated animal.Known for its loyalty and faithfulness,it can be found as a welcome guest in many households across the world.</p>
        </div>
      </div>
    </div>
    <div role="tablist" class="ant-collapse-item">
      <div role="tab" class="ant-collapse-header">
        <i class="arrow"></i>This is panel header 2</div>
      <!---->
    </div>
    <div role="tablist" class="ant-collapse-item ant-collapse-item-disabled">
      <div role="tab" class="ant-collapse-header">
        <i class="arrow"></i>This is panel header 3</div>
      <!---->
    </div>
  </div>
</div>
`;

exports[`renders ./components/collapse/demo/borderless.md correctly 1`] = `
<div>
  <div class="ant-collapse ant-collapse-borderless">
    <div role="tablist" class="ant-collapse-item ant-collapse-item-active">
      <div role="tab" aria-expanded="true" class="ant-collapse-header">
        <i class="arrow"></i>This is panel header 1</div>
      <div role="tabpanel" class="ant-collapse-content ant-collapse-content-active">
        <div class="ant-collapse-content-box">
          <p>A dog is a type of domesticated animal.Known for its loyalty and faithfulness,it can be found as a welcome guest in many households across the world.</p>
        </div>
      </div>
    </div>
    <div role="tablist" class="ant-collapse-item">
      <div role="tab" class="ant-collapse-header">
        <i class="arrow"></i>This is panel header 2</div>
      <!---->
    </div>
    <div role="tablist" class="ant-collapse-item">
      <div role="tab" class="ant-collapse-header">
        <i class="arrow"></i>This is panel header 3</div>
      <!---->
    </div>
  </div>
</div>
`;

exports[`renders ./components/collapse/demo/custom.md correctly 1`] = `
<div>
  <div class="ant-collapse ant-collapse-borderless">
    <div role="tablist" class="ant-collapse-item ant-collapse-item-active" style="background:#f7f7f7;border-radius:4px;margin-bottom:24px;border:0;overflow:hidden;">
      <div role="tab" aria-expanded="true" class="ant-collapse-header">
        <i class="arrow"></i>
        This is panel header 1
        <i class="anticon anticon-question-circle-o"></i>
      </div>
      <div role="tabpanel" class="ant-collapse-content ant-collapse-content-active">
        <div class="ant-collapse-content-box">
          <p>A dog is a type of domesticated animal.Known for its loyalty and faithfulness,it can be found as a welcome guest in many households across the world.</p>
        </div>
      </div>
    </div>
    <div role="tablist" class="ant-collapse-item" style="background:#f7f7f7;border-radius:4px;margin-bottom:24px;border:0;overflow:hidden;">
      <div role="tab" class="ant-collapse-header">
        <i class="arrow"></i>This is panel header 2</div>
      <!---->
    </div>
    <div role="tablist" class="ant-collapse-item" style="background:#f7f7f7;border-radius:4px;margin-bottom:24px;border:0;overflow:hidden;">
      <div role="tab" class="ant-collapse-header">
        <i class="arrow"></i>This is panel header 3</div>
      <!---->
    </div>
  </div>
</div>
`;

exports[`renders ./components/collapse/demo/mix.md correctly 1`] = `
<div>
  <div class="ant-collapse">
    <div role="tablist" class="ant-collapse-item">
      <div role="tab" class="ant-collapse-header">
        <i class="arrow"></i>This is panel header 1</div>
      <!---->
    </div>
    <div role="tablist" class="ant-collapse-item">
      <div role="tab" class="ant-collapse-header">
        <i class="arrow"></i>This is panel header 2</div>
      <!---->
    </div>
    <div role="tablist" class="ant-collapse-item">
      <div role="tab" class="ant-collapse-header">
        <i class="arrow"></i>This is panel header 3</div>
      <!---->
    </div>
  </div>
</div>
`;

exports[`renders ./components/collapse/demo/noarrow.md correctly 1`] = `
<div>
  <div class="ant-collapse">
    <div role="tablist" class="ant-collapse-item ant-collapse-item-active">
      <div role="tab" aria-expanded="true" class="ant-collapse-header">
        <i class="arrow"></i>This is panel header with arrow icon</div>
      <div role="tabpanel" class="ant-collapse-content ant-collapse-content-active">
        <div class="ant-collapse-content-box">
          <p>A dog is a type of domesticated animal.Known for its loyalty and faithfulness,it can be found as a welcome guest in many households across the world.</p>
        </div>
      </div>
    </div>
    <div role="tablist" class="ant-collapse-item ant-collapse-no-arrow">
      <div role="tab" class="ant-collapse-header">This is panel header with no arrow icon</div>
      <!---->
    </div>
  </div>
</div>
`;
